--- a/vistas/sesionProductos/sesionPedidos.html
+++ b/vistas/sesionProductos/sesionPedidos.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../alertas/alertas.css">
-
-    <!-- CSS -->
     <link rel="stylesheet" href="../sesionProductos/sesionPedidos.css">
 </head>
 <body>
@@ -79,7 +77,7 @@
 <div id="detalle-producto" class="modal"></div>
 
 </body>
-    <script src="../sesionProductos/sesionPedidos.js" type="module"></script>
-    <script src="../sesionProductos/categoriaFiltrada.js" type="module"></script>
+<script type="module" src="./renderProductos.js"></script>
+<script src="./categoriaFiltrada.js" type="module"></script>
 
 </html>
