Actualizacion Usuario en barra

--- a/vistas/sesionProductos/sesionPedidos.html
+++ b/vistas/sesionProductos/sesionPedidos.html
@@ -64,5 +64,5 @@
 </body>
 <script type="module" src="./renderProductos.js"></script>
 <script src="./categoriaFiltrada.js" type="module"></script>
-
+<script type="module" src="./mostarUsuarioBarra.js"></script>
 </html>
